syntax = "proto3";
option java_multiple_files = true;
package dev.dl.grpc.auth;

service AuthService {
  rpc auth (AuthToken) returns (AuthenticationResult) {}
  rpc login (Credential) returns (CredentialResult) {}
}
message AuthToken {
  string token = 1;
  repeated string authorityRole = 2;
}
message AuthenticationResult {
  string userId = 1;
  repeated string role = 2;
  bool nonLock = 3;
}
message Credential {
  string username = 1;
  string password = 2;
}
message CredentialResult {
  string accessToken = 1;
  int32 expiresIn = 2;
  string refreshToken = 3;
  int32 refreshExpiresIn = 4;
  string tokenType = 5;
  string idToken = 6;
  int32 notBeforePolicy = 7;
  string sessionState = 8;
  string scope = 9;
}